force-app/main/default/objects/ssot__EngagementChannelParticipant__dlm/fields/ssot__IsOrganizer__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOrganizer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Organizer</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOrganizer</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>