force-app/main/default/objects/ssot__EngagementChannelParticipant__dlm/fields/ssot__ParticipantResponse__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantResponse__c</fullName>
    <label>Participant Response</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantResponse</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>