force-app/main/default/objects/ssot__EngagementChannelParticipant__dlm/fields/ssot__ParticipantType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantType__c</fullName>
    <label>Participant Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>